--- a/client/src/ui/theme/typography/fonts.scss
+++ b/client/src/ui/theme/typography/fonts.scss
@@ -36,3 +36,13 @@
     url("../../../assets/fonts/inter-v3-latin-600.woff2") format("woff2"),
     url("../../../assets/fonts/inter-v3-latin-600.woff") format("woff");
 }
+
+@font-face {
+  font-display: swap;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  src: local(""),
+    url("../../../assets/fonts/inter-v3-latin-600.woff2") format("woff2"),
+    url("../../../assets/fonts/inter-v3-latin-600.woff") format("woff");
+}
