--- a/kumascript/macros/CSSSyntax.ejs
+++ b/kumascript/macros/CSSSyntax.ejs
@@ -430,12 +430,11 @@ if (name === "preview-wiki-content") {
 }
 
 if (!formattedSyntax) {
-  formattedSyntax = "<span style=\"color:red;\">" +
-    `No syntax found in DB for '${name}'` + "</span>";
+  out = "<div class=\"notecard warning\"><h4>No syntax available</h4><p>No value found in the database.</p></div>";
+} else {
+    const rtlLocales = ['ar', 'he', 'fa'];
+    const rtl = rtlLocales.includes(env.locale);
+    const out = `<pre${rtl ? ' dir="rtl"' : ""}>${formattedSyntax}</pre>`
 }
-
-const rtlLocales = ['ar', 'he', 'fa'];
-const rtl = rtlLocales.includes(env.locale);
-const out = `<pre${rtl ? ' dir="rtl"' : ""}>${formattedSyntax}</pre>`
 
 %><%- out %>
