--- a/kumascript/macros/JsSidebar.ejs
+++ b/kumascript/macros/JsSidebar.ejs
@@ -302,18 +302,18 @@ var text = mdn.localStringMap({
     'Guide_keyed_collections': 'キー付きコレクション',
     'Guide_Objects': 'オブジェクトを利用する',
     'Guide_OOP': 'オブジェクトモデルの詳細',
-    'Guide_promises' : 'Using promises',
+    'Guide_promises' : 'プロミスの使用',
     'Guide_Iterators_Generators': 'イテレーターとジェネレーター',
     'Guide_Meta': 'メタプログラミング',
-    'Guide_Modules': 'JavaScript modules',
+    'Guide_Modules': 'JavaScript モジュール',
     'Complete_beginners': '初級編',
     'Basics': 'JavaScript の基礎',
-    'First_steps': 'JavaScript first steps',
-    'Building_blocks': 'JavaScript building blocks',
+    'First_steps': 'JavaScript の第一歩',
+    'Building_blocks': 'JavaScript の構成要素',
     'Intermediate': '中級編',
-    'Introducing_objects': 'Introducing JavaScript objects',
-    'Client-side_APIs': 'Client-side web APIs',
-    'Frameworks': 'Client-side JavaScript frameworks',
+    'Introducing_objects': 'JavaScript オブジェクト入門',
+    'Client-side_APIs': 'クライアントサイド Web API',
+    'Frameworks': 'クライアントサイド JavaScript フレームワーク',
     'Re-introduction': 'JavaScript 「再」入門',
     'Data_structures': 'JavaScript のデータ構造',
     'Equality': '等値比較と同一性',
@@ -322,10 +322,10 @@ var text = mdn.localStringMap({
     'Inheritance': '継承とプロトタイプチェーン',
     'Strict_mode': 'Strict モード',
     'Typed_arrays': 'JavaScript 型付き配列',
-    'Memory_Management': 'メモリ管理',
+    'Memory_Management': 'メモリー管理',
     'Event_Loop': '並列モデルとイベントループ',
-    'Reference': 'リファレンス:',
-    'Global_Objects': 'ビルトインオブジェクト',
+    'Reference': 'リファレンス',
+    'Global_Objects': '組み込みオブジェクト',
     'Operators': '式と演算子',
     'Statements': '文と宣言',
     'Functions': '関数',
