Add Japanese localization in HTTPSidebar.ejs

--- a/kumascript/macros/HTTPSidebar.ejs
+++ b/kumascript/macros/HTTPSidebar.ejs
@@ -84,6 +84,44 @@ var text = mdn.localStringMap({
     'Security': 'Seguridad en HTTP',
     'Authentication': 'Autenticación en HTTP'
   },
+  'ja': {
+    'HTTP': 'HTTP',
+    'HTTPGuide': 'HTTP ガイド',
+    'Basics': 'HTTP の基本',
+    'Overview': 'HTTP の概要',
+    'Evolution': 'HTTP の進化',
+    'ResourcesURI': 'リソースと URI',
+    'Identifying': 'ウェブ上のリソースの識別',
+    'DataURIs': 'データ URL',
+    'MIMETypes': 'MIME タイプ入門',
+    'ListMIMETypes': 'よくある MIME タイプ',
+    'WWWorNotWWW': 'www 付きと www なしの URL の選択',
+    'Messages': 'HTTP メッセージ',
+    'Session': '典型的な HTTP セッション',
+    'Connection1x': 'HTTP/1.x のコネクション管理',
+    'Ranges': 'HTTP 範囲リクエスト',
+    'Redirects': 'HTTP のリダイレクト',
+    'Conditionals': 'HTTP 条件付きリクエスト',
+    'ContentNego': 'コンテントネゴシエーション',
+    'Headers': 'HTTP ヘッダー',
+    'Response_codes': 'レスポンスコード',
+    'Compression': 'HTTP の圧縮',
+    'Cookies': 'HTTP Cookie',
+    'Caching': 'HTTP キャッシュ',
+    'CORS': 'HTTP アクセス制御 (CORS)',
+    'Resources': 'HTTP 仕様書',
+    'Feature_policy': '機能ポリシー',
+    'Guides': 'ガイド:',
+    'Reference': 'リファレンス:',
+    'Methods': 'HTTP リクエストメソッド',
+    'Status': 'HTTP レスポンスステータスコード',
+    'CSPDirectives': 'CSP ディレクティブ',
+    'CORS_errors': 'CORS エラー',
+    'FeaturePolicyDirectives': '機能ポリシーディレクティブ',
+    'Security': 'HTTP セキュリティ',
+    'Authentication': 'HTTP 認証',
+    'ProtocolUpgradeMech': 'プロトコルのアップグレードの仕組み'
+  },
   'ko': {
     'HTTP': 'HTTP',
     'HTTPGuide': 'HTTP 가이드',
