--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-table.scss
@@ -54,9 +54,11 @@
 
   .bc-table-row-header {
     padding: math.div($base-spacing, 2) math.div($base-spacing, 4);
+    display: flex;
 
     code {
       text-decoration: none;
+      white-space: normal;
     }
   }
 
