consolidate on 'Quick_links' (not 'Quick_Links')

--- a/kumascript/macros/CSSTutorialTOC.ejs
+++ b/kumascript/macros/CSSTutorialTOC.ejs
@@ -3,7 +3,7 @@ var l = env.locale;
 
 if(l === "ru"){
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
 <ol><li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/What_is_CSS">Что такое CSS?</a></li>
     <li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/Why_use_CSS">Зачем нужен CSS?</a></li>
 	<li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/How_CSS_works">Как работает CSS</a></li>
@@ -28,7 +28,7 @@ if(l === "ru"){
 <%
 } else {
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
 <ol><li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/What_is_CSS">What is CSS?</a></li>
    	<li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/Why_use_CSS">Why use CSS?</a></li>
 	<li><a href="/<%- l %>/docs/Web/Guide/CSS/Getting_Started/How_CSS_works">How CSS works</a></li>
