--- a/kumascript/macros/FirefoxSidebar.ejs
+++ b/kumascript/macros/FirefoxSidebar.ejs
@@ -318,7 +318,7 @@ const text = mdn.localStringMap({
 
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
   <ol>
     <li class="toggle">
         <details>
