--- a/kumascript/macros/JSRef.ejs
+++ b/kumascript/macros/JSRef.ejs
@@ -225,7 +225,7 @@ var len = 0;
 
 // Output
 
-output  = '<section class="Quick_links" id="Quick_Links"><ol>';
+output  = '<section id="Quick_links"><ol>';
 output += '<li><strong><a href="'+slug_stdlib+'">'+text['stdlib']+'</a></strong></li>';
 
     for (object in result) {
