--- a/kumascript/macros/MDNSidebar.ejs
+++ b/kumascript/macros/MDNSidebar.ejs
@@ -409,7 +409,7 @@ const text = mdn.localStringMap({
 
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
   <ol>
     <li><a href="<%=baseURL%>About"><%=text['About_MDN']%></a></li>
     <li class="toggle">
