--- a/kumascript/macros/WebGLSidebar.ejs
+++ b/kumascript/macros/WebGLSidebar.ejs
@@ -105,7 +105,7 @@ var text = mdn.localStringMap({
   }
 });
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/API/WebGL_API"><strong><%=text['WebGL_API']%></strong></a></li>
   <li class="toggle">
