--- a/kumascript/macros/APIRef.ejs
+++ b/kumascript/macros/APIRef.ejs
@@ -237,7 +237,7 @@ function buildIFList(interfaces, title) {
 }
 
 // output
-output = '<section class="Quick_links" id="Quick_Links"><ol>';
+output = '<section id="Quick_links"><ol>';
 if (group && webAPIGroups[0][group] && webAPIGroups[0][group].overview) {
   output += '<li><strong><a href="' +  APIHref + '/' + webAPIGroups[0][group].overview[0].replace(/ /g, '_') + '">' + webAPIGroups[0][group].overview[0] + '</a></strong></li>';
 }
