--- a/kumascript/macros/AddonSidebarMain.ejs
+++ b/kumascript/macros/AddonSidebarMain.ejs
@@ -52,7 +52,7 @@ var text = mdn.localStringMap({
 
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
   <ol>
     <li><a href="<%=baseURL%>WebExtensions"><strong><%=text['WebExtensions']%></strong></a></li>
     <li><a href="<%=baseURL%>Themes"><strong><%=text['Themes']%></strong></a></li>
