--- a/kumascript/macros/CanvasSidebar.ejs
+++ b/kumascript/macros/CanvasSidebar.ejs
@@ -142,7 +142,7 @@ var text = mdn.localStringMap({
   }
 });
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/API/Canvas_API"><strong><%=text['Canvas_API']%></strong></a></li>
   <li class="toggle">
