--- a/kumascript/macros/DefaultAPISidebar.ejs
+++ b/kumascript/macros/DefaultAPISidebar.ejs
@@ -102,7 +102,7 @@ function convertEvent(eventName) {
 }
 
 // output
-output = '<section class="Quick_links" id="Quick_Links"><ol>';
+output = '<section id="Quick_links"><ol>';
 
 if (webAPIGroups[0][group].overview) {
   output += '<li><strong><a href="' +  APIHref + '/' + webAPIGroups[0][group].overview[0].replace(/ /g, '_') + '">' + webAPIGroups[0][group].overview[0] + '</a></strong></li>';
