--- a/kumascript/macros/EditorGuideQuicklinks.ejs
+++ b/kumascript/macros/EditorGuideQuicklinks.ejs
@@ -21,7 +21,7 @@ switch (env.locale) {
     default: break;
 }
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
 <ol>
  <li><a href="#" title="#"><%-s_guide%></a>
  <%-await template("ListSubpages", ["/en-US/docs/MDN/Contribute/Editor", 1, 0, 1])%>
