--- a/kumascript/macros/HTMLRef.ejs
+++ b/kumascript/macros/HTMLRef.ejs
@@ -60,14 +60,14 @@ var resultGuide = [];
 var resultAPI = [];
 
  if (s_html_href) {  %>
-  <section class="Quick_links" id="Quick_Links">
+  <section id="Quick_links">
   <ol>
-   <% if (found_tag) { 
+   <% if (found_tag) {
         for( aPage in resultGuide) { // Tutorials and guides matching
   %>
             <li><a href="<%-resultGuide[aPage].url%>"><%-resultGuide[aPage].title%></a></li>
   <%    }
-        for (slugLeaf in resultHTML) { // HTML entities matching 
+        for (slugLeaf in resultHTML) { // HTML entities matching
             if (resultHTML[slugLeaf] === "heading_elements") { // Special case for <h1>…<h6>
   %>
             <li><%- await template("HTMLelement", ["Heading_elements", "<code>&lt;h1&gt;-&lt;h6&gt;</code>"]) %></li>
@@ -77,11 +77,11 @@ var resultAPI = [];
   %>
             <li><%- await template("HTMLelement", [resultHTML[slugLeaf]]) %></li>
   <%        }
-        } 
-        for (slugLeaf in resultAPI) { // HTML-DOM interfaces matching 
+        }
+        for (slugLeaf in resultAPI) { // HTML-DOM interfaces matching
   %>
             <li><%- await template("domxref", [resultAPI[slugLeaf]]) %></li>
-  <%    } 
+  <%    }
     } %>
     <% if (env.slug.includes("/HTML/Element/input")) { %>
    <li><details open><summary><%-text['Input_types']%></summary>
@@ -288,11 +288,11 @@ var resultAPI = [];
  <ol>
   <li class="html5"><%-await template("HTMLElement", ["wbr"])%></li>
  </ol>
- </li><li>X Y Z 
+ </li><li>X Y Z
  <ol>
   <li><s class="obsoleteElement"><%-await template("HTMLElement", ["xmp"])%></s></li>
  </ol>
-    </li>  
+    </li>
    </ol>
    </details></li>
    </ol>
