--- a/kumascript/macros/HTMLSidebar.ejs
+++ b/kumascript/macros/HTMLSidebar.ejs
@@ -112,7 +112,7 @@ var text = mdn.localStringMap({
   }
 });
 %>
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/HTML"><strong><em>HTML</em></strong></a></li>
   <li><strong><%=text['Tutorials']%></strong></li>
