--- a/kumascript/macros/HTTPSidebar.ejs
+++ b/kumascript/macros/HTTPSidebar.ejs
@@ -174,7 +174,7 @@ var text = mdn.localStringMap({
 %>
 
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
   <ol>
     <li><a href="/<%=locale%>/docs/Web/HTTP"><strong><em><%=text['HTTP']%></em></strong></a></li>
     <li><strong><%=text['Guides']%></strong></li>
