--- a/kumascript/macros/JsSidebar.ejs
+++ b/kumascript/macros/JsSidebar.ejs
@@ -397,7 +397,7 @@ var text = mdn.localStringMap({
   },
 });
 %>
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/JavaScript"><strong><em>JavaScript</em></strong></a></li>
   <li><a href="/<%=locale%>/docs/Web/JavaScript/Tutorials"><strong><%=text['Tutorials']%></strong></a></li>
