--- a/kumascript/macros/LearnSidebar.ejs
+++ b/kumascript/macros/LearnSidebar.ejs
@@ -1825,7 +1825,7 @@ var text = mdn.localStringMap({
 });
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
 
 <ol>
   <li data-default-state="<%=currentPageIsUnder('Getting_started_with_the_web')%>"><a href="<%=baseURL%>Getting_started_with_the_web"><strong><%=text['Complete_beginners']%></strong></a></li>
@@ -2276,4 +2276,3 @@ var text = mdn.localStringMap({
 </ol>
 
 </section>
-
