--- a/kumascript/macros/MathMLRef.ejs
+++ b/kumascript/macros/MathMLRef.ejs
@@ -41,14 +41,14 @@ for (aPage in pageList) {
 }
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
     <ol>
         <li><strong><a href="<%=s_mathml_ref_href%>"><%=s_mathml_ref_title%></a></strong>
 
         <% for (aPage in result) { %>
             <li><a href="<%-result[aPage].url%>"><%-safe_tags(result[aPage].title)%></a></li>
         <% } %>
-        
-        </li>  
+
+        </li>
     </ol>
 </section>
