--- a/kumascript/macros/QuickLinksWithSubpages.ejs
+++ b/kumascript/macros/QuickLinksWithSubpages.ejs
@@ -9,6 +9,6 @@
 //
 //  $0  Optional; the page whose subpages are to be included.
 %>
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
 <%-await template("ListSubpages", [$0, 2, 0, 1])%>
 </section>
