--- a/kumascript/macros/ServiceWorkerSidebar.ejs
+++ b/kumascript/macros/ServiceWorkerSidebar.ejs
@@ -44,7 +44,7 @@ var text = mdn.localStringMap({
   }
 });
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/API/Service_Worker_API"><strong><%=text['Service_Worker_API']%></strong></a></li>
   <li class="toggle">
