--- a/kumascript/macros/ToolsSidebar.ejs
+++ b/kumascript/macros/ToolsSidebar.ejs
@@ -461,7 +461,7 @@ const text = mdn.localStringMap({
 
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
     <ol>
         <li><a href="<%=baseURL%>Page_Inspector"><%=text['Page_Inspector']%></a></li>
         <li><a href="<%=baseURL%>Web_Console"><%=text['Web_Console']%></a></li>
