--- a/kumascript/macros/WebAssemblySidebar.ejs
+++ b/kumascript/macros/WebAssemblySidebar.ejs
@@ -20,7 +20,7 @@ var text = mdn.localStringMap({
 });
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
 
 <ol>
   <li data-default-state="open"><a href="<%=baseURL%>"><strong><%=text['WebAssembly_home_page']%></strong></a>
