--- a/kumascript/macros/WebRTCSidebar.ejs
+++ b/kumascript/macros/WebRTCSidebar.ejs
@@ -52,7 +52,7 @@ var text = mdn.localStringMap({
   }
 });
 %>
-<section id="Quick_Links">
+<section id="Quick_links">
  <ol>
   <li><a href="/<%=locale%>/docs/Web/API/WebRTC_API"><strong><%=text['WebRTC_API']%></strong></a></li>
   <li class="toggle">
