Add ability to render preview browsers (introduced in BCD 4.0.0) (#3997)
* Add ability to render preview browsers (introduced in BCD 4.0.0)

* Update client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss

Co-authored-by: Ryan Johnson <escattone@gmail.com>

Co-authored-by: Ryan Johnson <escattone@gmail.com>
Co-authored-by: rjohnson <rjohnson@mozilla.com>

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-supports.scss
@@ -84,3 +84,7 @@ $bc-partial-support-cross: rgba(144, 99, 18, 0.2);
 .bc-supports-unknown {
   background-color: $mdn-neutral100;
 }
+
+.bc-supports-preview {
+  background-color: $mdn-blue100;
+}
