--- a/client/src/document/molecules/_breadcrumb-locale-container.scss
+++ b/client/src/document/molecules/_breadcrumb-locale-container.scss
@@ -6,6 +6,10 @@
   display: flex;
   padding: math.div($base-spacing, 2) $base-spacing;
 
+  @media #{$mq-tablet-and-up} {
+    margin: $base-spacing 0 0;
+  }
+
   @media #{$mq-small-desktop-and-up} {
     margin: $base-spacing 0 0;
   }
