--- a/kumascript/macros/JSRef.ejs
+++ b/kumascript/macros/JSRef.ejs
@@ -10,8 +10,8 @@
 //  $2 - Related objects to display (comma separated) – OBSOLETE
 
 // Strings
-var commonl10n = JSON.parse(await template('L10n:Common'));
-var jsl10n = JSON.parse(await template('L10n:JavaScript'));
+var commonl10n = web.getJSONData('L10n-Common');
+var jsl10n = web.getJSONData('L10n-JavaScript');
 
 var text = {
     'stdlib': mdn.getLocalString(jsl10n, 'stdlib'),
