basic start to bookmarks

--- a/client/src/document/molecules/_breadcrumb-locale-container.scss
+++ b/client/src/document/molecules/_breadcrumb-locale-container.scss
@@ -25,7 +25,7 @@
   }
 
   .language-toggle {
-    flex: 1 0 max-content;
+    flex: 1 1 fit-content;
   }
 
   // when the breadcrumbs is the only item in the container
