--- a/client/src/ui/molecules/bookmark/index.scss
+++ b/client/src/ui/molecules/bookmark/index.scss
@@ -5,6 +5,7 @@
 @use "../../theme/index" as theme;
 
 .bookmark-button {
+  background-color: transparent;
   border-radius: math.div(theme.$default-border-radius, 3);
   height: 35px;
   max-width: inherit;
