--- a/client/src/ui/theme/color-palette/index.scss
+++ b/client/src/ui/theme/color-palette/index.scss
@@ -13,6 +13,17 @@ $mdn-neutral700: #42435a;
 $mdn-neutral800: #1f2033;
 $mdn-neutral900: #141422;
 
+$mdn-dark-grey050: #5b5b66;
+$mdn-dark-grey100: #52525e;
+$mdn-dark-grey200: #4a4a55;
+$mdn-dark-grey300: #42414d;
+$mdn-dark-grey400: #3a3944;
+$mdn-dark-grey500: #32313c;
+$mdn-dark-grey600: #2b2a33;
+$mdn-dark-grey700: #23222b;
+$mdn-dark-grey800: #1c1b22;
+$mdn-dark-grey900: #15141a;
+
 $mdn-light-grey050: #fbfbfe;
 $mdn-light-grey100: #f9f9fb;
 $mdn-light-grey200: #f0f0f4;
