--- a/client/src/ui/theme/index.scss
+++ b/client/src/ui/theme/index.scss
@@ -1,7 +1,10 @@
 @import "./borders-shadows/index";
 @import "./buttons/index";
 @import "./color-palette/index";
+@import "./color-palette/icons";
+@import "./color-palette/text";
 @import "./typography/index";
 @import "./links/index";
 @import "./code-examples/index";
+@import "./page/index";
 @import "./utils/index";
