Fix broken link in GameSidebar
Fixes mdn/content#8602

--- a/kumascript/macros/GamesSidebar.ejs
+++ b/kumascript/macros/GamesSidebar.ejs
@@ -589,7 +589,7 @@ const text = mdn.localStringMap({
             <ol>
               <li><a href="<%=webURL%>API/Canvas_API"><%=text["Canvas"]%></a></li>
               <li><a href="<%=webURL%>CSS"><%=text["CSS"]%></a></li>
-              <li><a href="<%=appsURL%>Fundamentals/User_notifications/Full_screen_api"><%=text["Full_Screen"]%></a></li>
+              <li><a href="<%=webURL%>API/Fullscreen_API><%=text["Full_Screen"]%></a></li>
               <li><a href="<%=webURL%>API/Gamepad_API"><%=text["Gamepad"]%></a></li>
               <li><a href="<%=webURL%>API/IndexedDB_API"><%=text["IndexedDB"]%></a></li>
               <li><a href="<%=webURL%>JavaScript"><%=text["JavaScript"]%></a></li>
