consolidate on 'Quick_links' (not 'Quick_Links') (#4512)

--- a/kumascript/macros/CSSRef.ejs
+++ b/kumascript/macros/CSSRef.ejs
@@ -394,7 +394,7 @@ function buildSublist(pages, title) {
 
 %>
 
-<section class="Quick_links" id="Quick_Links">
+<section id="Quick_links">
 
 <ol>
   <li><strong><%=text['Learn_CSS']%></strong></li>
