Simplify CSS class stuff

--- a/kumascript/macros/CSSSyntax.ejs
+++ b/kumascript/macros/CSSSyntax.ejs
@@ -54,21 +54,12 @@ const multiplierInfo = {
 }
 
 /**
- * CSS classes for nodes, to apply syntax highlighting
- */
-const cssClasses = {
-  'Property': ' class=\'token property\'',
-  'Keyword': ' class=\'token keyword\'',
-  'Function': ' class=\'token function\''
-}
-
-/**
  * Determines the markup to generate for a single node.
  */
 function renderNode(name, node) {
   switch (node.type) {
     case 'Property': {
-      return `<span${cssClasses['Property']}>${name}</span>`;
+      return `<span class="token property">${name}</span>`;
     }
     case 'Type': {
       // encode < and >
@@ -76,7 +67,7 @@ function renderNode(name, node) {
       name = name.replaceAll('>', '&gt;');
       // add CSS class
       // we use "property" because there isn't one for types
-      return `<span${cssClasses['Property']}>${name}</span>`;
+      return `<span class="token property">${name}</span>`;
     }
     case 'Multiplier': {
       // link to the Value Definition Symtax and provide a tooltip
@@ -87,14 +78,16 @@ function renderNode(name, node) {
       const info = multiplierInfo[key];
       return `<a href="/${locale}/docs/Web/CSS/Value_definition_syntax#${info.fragment}" title="${info.tooltip}">${name}</a>`;
     }
-    case 'Keyword':
+    case 'Keyword': {
+      return `<span class="token keyword">${name}</span>`;
+    }
     case 'Function': {
-      return `<span${cssClasses[node.type]}>${name}</span>`;
+      return `<span class="token function">${name}</span>`;
     }
     case 'Token': {
       if (name === ')') {
         // this is probably a closing bracket
-        return `<span${cssClasses['Function']}>${name}</span>`;
+        return `<span class="token function">${name}</span>`;
       }
     }
   }
@@ -142,7 +135,7 @@ function renderTerms(terms, combinator) {
 function renderSyntax(type, syntax) {
   // write out the name of this type
   const typeName = `&lt;${type}&gt;`;
-  let output = `<span${cssClasses['Property']} id="${typeName}">${typeName} = </span><br/>`;
+  let output = `<span class="token property" id="${typeName}">${typeName} = </span><br/>`;
 
   const ast = definitionSyntax.parse(syntax);
   // if the combinator is ' ', write the complete type syntax in a single line
