--- a/kumascript/macros/AddonSidebar.ejs
+++ b/kumascript/macros/AddonSidebar.ejs
@@ -125,7 +125,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Travailler avec l\'API Bookmarks',
     'WebExtensions/Work_with_the_Cookies_API': 'Travailler avec l\'API Cookies',
     'WebExtensions/Work_with_contextual_identities': 'Travailler avec des identités contextuelles',
-    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
+    'WebExtensions/Interact_with_the_clipboard': 'Interagir avec le presse-papier',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox differentiators',
     'WebExtensions#Firefox_workflow': 'Déroulement avec Firefox',
