--- a/kumascript/macros/AddonSidebar.ejs
+++ b/kumascript/macros/AddonSidebar.ejs
@@ -196,7 +196,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Bookmark API 群の使い方',
     'WebExtensions/Work_with_the_Cookies_API': 'Cookie API 群の使い方',
     'WebExtensions/Work_with_contextual_identities': 'contextual identities の使い方',
-    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
+    'WebExtensions/Interact_with_the_clipboard': 'クリップボードとのやりとり',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox differentiators',
     'WebExtensions#Firefox_workflow': 'Firefox でのワークフロー',
