Interact with clipboard article to add-on sidebar (#4644)
* Interact with clipboard article to add-on sidebar

* Update kumascript/macros/AddonSidebar.ejs

* Update kumascript/macros/AddonSidebar.ejs

Co-authored-by: Ryan Johnson <escattone@gmail.com>

--- a/kumascript/macros/AddonSidebar.ejs
+++ b/kumascript/macros/AddonSidebar.ejs
@@ -53,6 +53,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Work with the Bookmarks API',
     'WebExtensions/Work_with_the_Cookies_API': 'Work with the Cookies API',
     'WebExtensions/Work_with_contextual_identities': 'Work with contextual identities',
+    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox differentiators',
     'WebExtensions#Firefox_workflow': 'Firefox workflow',
@@ -124,6 +125,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Travailler avec l\'API Bookmarks',
     'WebExtensions/Work_with_the_Cookies_API': 'Travailler avec l\'API Cookies',
     'WebExtensions/Work_with_contextual_identities': 'Travailler avec des identités contextuelles',
+    'WebExtensions/Interact_with_the_clipboard': 'Interagir avec le presse-papier',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox differentiators',
     'WebExtensions#Firefox_workflow': 'Déroulement avec Firefox',
@@ -194,6 +196,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Bookmark API 群の使い方',
     'WebExtensions/Work_with_the_Cookies_API': 'Cookie API 群の使い方',
     'WebExtensions/Work_with_contextual_identities': 'contextual identities の使い方',
+    'WebExtensions/Interact_with_the_clipboard': 'クリップボードとのやりとり',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox differentiators',
     'WebExtensions#Firefox_workflow': 'Firefox でのワークフロー',
@@ -264,6 +267,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Bookmarks API 사용하기',
     'WebExtensions/Work_with_the_Cookies_API': 'Cookies API 사용하기',
     'WebExtensions/Work_with_contextual_identities': 'contextual identities 사용하기',
+    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
     'WebExtensions/Build_a_cross_browser_extension': 'Build a cross-browser extension',
     'WebExtensions/Firefox_differentiators': 'Firefox의 차별화',
     'WebExtensions/API': 'JavaScript APIs',
@@ -320,6 +324,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': '使用Bookmarks API',
     'WebExtensions/Work_with_the_Cookies_API': '使用Cookies API',
     'WebExtensions/Work_with_contextual_identities': '使用上下文身份',
+    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
     'WebExtensions/Build_a_cross_browser_extension': '构建跨浏览器扩展',
     'WebExtensions#Porting': '移植',
     'WebExtensions/Firefox_differentiators': 'Firefox的优势',
@@ -377,6 +382,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Work_with_the_Bookmarks_API': 'Trabalhar com a API Bookmarks',
     'WebExtensions/Work_with_the_Cookies_API': 'Trabalhe com a API de Cookies',
     'WebExtensions/Work_with_contextual_identities': 'Trabalhe com identidades contextuais',
+    'WebExtensions/Interact_with_the_clipboard': 'Interact with the clipboard',
     'WebExtensions/Build_a_cross_browser_extension': 'Crie uma extensão para vários navegadores',
     'WebExtensions/Firefox_differentiators': 'Diferenciadores do Firefox',
     'WebExtensions#Firefox_workflow': 'Fluxo de trabalho do Firefox',
@@ -474,6 +480,7 @@ var text = mdn.localStringMap({
           <li><a href="<%=baseURL%>WebExtensions/Work_with_the_Bookmarks_API"><%=text['WebExtensions/Work_with_the_Bookmarks_API']%></a></li>
           <li><a href="<%=baseURL%>WebExtensions/Work_with_the_Cookies_API"><%=text['WebExtensions/Work_with_the_Cookies_API']%></a></li>
           <li><a href="<%=baseURL%>WebExtensions/Work_with_contextual_identities"><%=text['WebExtensions/Work_with_contextual_identities']%></a></li>
+          <li><a href="<%=baseURL%>WebExtensions/Interact_with_the_clipboard"><%=text['WebExtensions/Interact_with_the_clipboard']%></a></li>
           <li><a href="<%=baseURL%>WebExtensions/Build_a_cross_browser_extension"><%=text['WebExtensions/Build_a_cross_browser_extension']%></a></li>
         </ol>
       </details>
