add some basic translations from google translate

--- a/kumascript/macros/AddonSidebar.ejs
+++ b/kumascript/macros/AddonSidebar.ejs
@@ -214,7 +214,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Best_practices_for_updating_your_extension': 'Best practices for updating your extension',
     'WebExtensions/API': 'JavaScript API 群',
     'WebExtensions/manifest.json': 'Manifest keys',
-    'WebExtensions/manifest.json_intro': 'Introduction',
+    'WebExtensions/manifest.json_intro': '序章',
     'extension_workshop': 'Extension Workshop',
     'extension_workshop_develop': 'Develop',
     'extension_workshop_publish': 'Publish',
@@ -271,7 +271,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Firefox_differentiators': 'Firefox의 차별화',
     'WebExtensions/API': 'JavaScript APIs',
     'WebExtensions/manifest.json': 'Manifest 키',
-    'WebExtensions/manifest.json_intro': 'Introduction',
+    'WebExtensions/manifest.json_intro': '소개',
     'extension_workshop': 'Extension Workshop',
     'extension_workshop_develop': 'Develop',
     'extension_workshop_publish': 'Publish',
@@ -329,7 +329,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Firefox_differentiators': 'Firefox的优势',
     'WebExtensions/API': 'JavaScript APIs',
     'WebExtensions/manifest.json': 'Manifest keys',
-    'WebExtensions/manifest.json_intro': 'Introduction',
+    'WebExtensions/manifest.json_intro': '介绍',
     'extension_workshop': 'Extension Workshop',
     'extension_workshop_develop': 'Develop',
     'extension_workshop_publish': 'Publish',
@@ -401,7 +401,7 @@ var text = mdn.localStringMap({
     'WebExtensions/Best_practices_for_updating_your_extension': 'Práticas recomendadas para atualizar sua extensão',
     'WebExtensions/API': 'APIs JavaScript',
     'WebExtensions/manifest.json': 'Chaves Manifest',
-    'WebExtensions/manifest.json_intro': 'Introduction',
+    'WebExtensions/manifest.json_intro': 'Introdução',
     'extension_workshop': 'Workshop de extensões',
     'extension_workshop_develop': 'Desenvolver',
     'extension_workshop_publish': 'Publicar',
