fix: hide sign in and join when authenticated
Hide the "Already a subscriber?" and "Get MDN Plus" links when user is authenticated.

fix #177

--- a/client/src/ui/organisms/header/index.scss
+++ b/client/src/ui/organisms/header/index.scss
@@ -73,7 +73,7 @@
   }
 
   @media #{$mq-large-desktop-and-up} {
-    grid-template-columns: 2fr 120px 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
   }
 
   .main-nav,
